# corespine

./: .gitignore  CLAUDE.md  Makefile  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: BENCH.md  bench_seams.py
deploy/: .dockerignore  Dockerfile  README.md
docs/: extending.md  prd.md  roadmap.md
docs/adr/: 0002-providererror-promoted-to-core.md  0003-blobstore-seam-promoted-to-core.md  0004-credentialstore-seam-promoted-to-core.md  0005-trigger-seam-mechanism-in-core.md
docs/llms/: api.md  gotchas.md  overview.md  recipes.md
examples/: conformance_usage.py  quickstart.py  trace_seam_usage.py
src/corespine/: __init__.py  errors.py
src/corespine/blob/: __init__.py  store.py
src/corespine/config/: __init__.py  env.py
src/corespine/conformance/: __init__.py  harness.py
src/corespine/credential/: __init__.py  store.py
src/corespine/llm/: __init__.py  provider.py  rate_limit.py
src/corespine/observability/: __init__.py  trace.py
src/corespine/queue/: __init__.py  task_queue.py
src/corespine/seam/: __init__.py  registry.py
src/corespine/trigger/: __init__.py  source.py
tests/: test_blob.py  test_conformance_bridge.py  test_conformance_harness.py  test_credential.py  test_env.py  test_errors.py  test_provider.py  test_rate_limit.py  test_registry.py  test_streaming.py  test_task_queue.py  test_trace.py  test_trace_exporter.py  test_trigger.py
