[project]
name = "corespine"
version = "0.4.0"
description = "Spine 家族的薄共享核:domain-neutral 底层原语(缝注册表 / observability / LLM 缝 / config / queue / conformance 基座)。"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "lin han" }]
keywords = [
    "seam",
    "registry",
    "conformance",
    "observability",
    "llm-provider",
    "task-queue",
    "framework-free",
    "offline",
]
# 注:license 用 SPDX 表达式(PEP 639),故【不】再加 "License ::" 分类器(避免与 twine 冲突)。
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
# 薄核宪章(ADR 0001 D5):默认路径零重依赖,只用标准库。真实后端的 SDK 由各 app
# 在自己的缝里经可选 extra 延迟 import,核心不背任何运行时三方依赖。
dependencies = []

# crypto:仅 EncryptedFileCredentialStore 需要(Fernet 对称加密)。默认路径零依赖,
# cryptography(Apache-2.0/BSD 双许可)经此可选 extra 延迟 import,dependencies 仍为空。
[project.optional-dependencies]
crypto = ["cryptography>=42"]
# dev 内含 crypto,使 conformance 在 CI 下覆盖全部实现(含加密实现)。
dev = ["pytest>=8.0.0", "ruff>=0.6", "mypy>=1.11", "cryptography>=42"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corespine"]

# 面向 AI 消费者的使用文档随 wheel 出货,装后在 site-packages/corespine/_llms/ 可读
# (llms.txt 索引 + docs/llms/*.md)。映射到包内 _llms/,不污染 corespine 命名空间的导入面。
[tool.hatch.build.targets.wheel.force-include]
"llms.txt" = "corespine/_llms/llms.txt"
"docs/llms" = "corespine/_llms/docs"

# ruff:lint + format 统一以此为准(家族风格,与 ragspine 对齐)。
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
# 一组克制的默认规则:pyflakes(F)、pycodestyle(E/W)、import 排序(I)、
# 语法现代化(UP)、常见 bug 形态(B)。E501 交给格式化器,不重复报行宽。
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

# mypy:对【出货代码】(src)强制 strict——共享核理应是家族里类型最严的一环
# (消费者 ragspine 已 mypy --strict;核心不能反而最松)。tests 不纳入(避免测试
# 函数注解噪音),交由各自风格约束。
[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
files = ["src/corespine"]

# pytest:加宽的零警告门(标准 §11)——warnings-as-errors(把静默 warning 升为失败,
# 这是薄核最该堵的隐性失败面)+ importlib 导入模式(现代 src 布局推荐,避免 sys.path 污染)。
[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
filterwarnings = ["error"]
